# claude-harness-kit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.ko.md  README.md  SECURITY.md  SPEC.md  package.json
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
codex/: DESIGN.md  pyproject.toml
codex/agents/debate/: advocate_a.toml  advocate_b.toml  devils_advocate.toml  judge.toml
codex/agents/explore/: evidence.toml  hypothesizer.toml  scout.toml  synthesizer.toml
codex/agents/research/: crawler.toml  planner.toml  reader.toml  synthesizer.toml
codex/agents/review/: correctness.toml  judge.toml  moderator.toml  performance.toml  security.toml
codex/plugin/harnesses/.codex-plugin/: plugin.json
codex/plugin/harnesses/agents/: openai.yaml
codex/plugin/harnesses/skills/harnesses-debate/: SKILL.md
codex/plugin/harnesses/skills/harnesses-router/: SKILL.md
codex/prompts/: debate.md
codex/src/codex_harnesses/: cli.py  instructions.py  orchestrator.py  routing.py  runner.py  state.py  types.py
codex/src/codex_harnesses/teams/: debate.py  explore.py  generic.py  research.py  review.py
codex/tests/: conftest.py  test_cli.py  test_debate.py  test_orchestrator.py  test_routing.py  test_runner.py  test_state.py
docs/: AGENTS_MD_STANDARD.md  CREATING_TEAMS.md  DESCRIPTION_FORMULA.md  PATTERNS.md  TRACE_LOG.md
examples/: 01-simple-feature.md  02-code-review.md  03-research-task.md  04-architecture-decision.md  05-debugging-session.md
scripts/: install.sh  uninstall.sh
tests/: installer.test.mjs
(+16 files in other folders)
